--- a/gerarPlanilha.html
+++ b/gerarPlanilha.html
@@ -10,97 +10,167 @@
     </style>
 </head>
 <body>
+    <script language="JavaScript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.0/jquery.min.js"></script>
+
     <!--The div element for the map -->
     <div id="map"></div>
-    <script>
-      // Initialize and add the map
-      let map;
-      function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 6,
-          center: {lat: 41, lng: -86}
-        });
-
-        const cities = [
-          {lat: 41.88, lng: -87.62}, // Chicago
-          {lat: 43.05, lng: -87.95}, // Milwaukee
-          {lat: 42.33, lng: -83.04}, // Detroit
-          {lat: 39.76, lng: -86.15}, // Indianapolis
-          {lat: 38.62, lng: -90.19} // St. Louis
-        ];
-
-        // Loop through cities, adding markers
-        for (let i=0; i<cities.length; i++) {
-          let position = cities[i]; // location of one city
-          // create marker for a city
-          let mk = new google.maps.Marker({position: position, map: map});
-        }
-
-        // Add Distance Matrix here
-          const service = new google.maps.DistanceMatrixService(); // instantiate Distance Matrix service
-          const matrixOptions = {
-              origins: ["41.8848274,-87.6320859", "41.878729,-87.6301087", "41.8855277,-87.6440611"], // technician locations
-              destinations: ["41.8848274,-87.6320859", "41.878729,-87.6301087", "41.8855277,-87.6440611"], // customer address
-              travelMode: 'DRIVING',
-              unitSystem: google.maps.UnitSystem.METRIC
-          };
-          // Call Distance Matrix service
-          service.getDistanceMatrix(matrixOptions, callback);
-
-          // Callback function used to process Distance Matrix response
-          function callback(response, status) {
-              if (status !== "OK") {
-                  alert("Error with distance matrix");
-                  return;
-              }
-              console.log(response);
-              // Example data given in question text
-              var data = [
-                  ['name1', 'city1', 'some other info'],
-                  ['name2', 'city2', 'more info']
-              ];
-
-              // Building the CSV from the Data two-dimensional array
-              // Each column is separated by ";" and new line "\n" for next row
-
-              var csvContent = '';
-              data.forEach(function (infoArray, index) {
-                  dataString = infoArray.join(';');
-                  csvContent += index < data.length ? dataString + '\n' : dataString;
-              });
-
-              // The download function takes a CSV string, the filename and mimeType as parameters
-              // Scroll/look down at the bottom of this snippet to see how download is called
-              var download = function (content, fileName, mimeType) {
-                  var a = document.createElement('a');
-                  mimeType = mimeType || 'application/octet-stream';
-
-                  if (navigator.msSaveBlob) { // IE10
-                      navigator.msSaveBlob(new Blob([content], {
-                          type: mimeType
-                      }), fileName);
-                  } else if (URL && 'download' in a) { //html5 A[download]
-                      a.href = URL.createObjectURL(new Blob([content], {
-                          type: mimeType
-                      }));
-                      a.setAttribute('download', fileName);
-                      document.body.appendChild(a);
-                      a.click();
-                      document.body.removeChild(a);
-                  } else {
-                      location.href = 'data:application/octet-stream,' + encodeURIComponent(content); // only this mime type is supported
-                  }
-              }
-
-              download(csvContent, 'dowload.csv', 'text/csv;encoding:utf-8');
-
-          }
-
-      }
 
 
-    </script>
+    <h1 style="color: green">
+            Seletor de cidades
+    </h1>
+
+    <b>Para adicionar uma cidade digite no formato (cidade,siglapais) eg : miami,us ; leopoldina,br</b>
+
+    <p>
+        Após adicionar as cidades desejadas clique em dowload para gerar o csv
+    </p>
+
+    <button class="add-row">
+        Add Cidade
+    </button>
+
+    <button class="dowload">
+        Dowload
+    </button>
+    <input type="text" id="lname" name="lname"><br><br>
+    <table>
+        <thead>
+            <tr>
+                <th>Rows</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+            </tr>
+        </tbody>
+    </table>
+
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD634e8vHGhmv9HxtQb94zFcBCs8C1TTd8&callback=initMap">
     </script>
+    <!-- Script to add table row -->
+    <script>
+        var cities = [];
+        var i = 0;
+        let lineNo = 1;
+             let map;
+            function initMap() {
+                map = new google.maps.Map(document.getElementById('map'), {
+                    zoom: 6,
+                    center: { lat: 41, lng: -86 }
+                });
+       
+        const service = new google.maps.DistanceMatrixService(); // instantiate Distance Matrix service
+            $(document).ready(function () {
+                $(".dowload").click(function () {
+                    const matrixOptions = {
+                        origins: cities, // technician locations
+                        destinations: cities, // customer address
+                        travelMode: 'DRIVING',
+                        unitSystem: google.maps.UnitSystem.METRIC
+                    };
+                    // Call Distance Matrix service
+                    service.getDistanceMatrix(matrixOptions, callback);
+
+                });
+            });
+
+            $(document).ready(function () {
+                $(".add-row").click(function () {
+                    var text = document.getElementById('lname').value;
+                    markup = "<tr><td>"
+                        + text + "</td></tr>";
+                    tableBody = $("table tbody");
+                    tableBody.append(markup);
+                    lineNo++;
+                    var geocoder = new google.maps.Geocoder();
+                    geocoder.geocode({ 'address': text }, function (results, status) {
+                        if (status == google.maps.GeocoderStatus.OK) {
+                            alert("location : " + results[0].geometry.location.lat() + " " + results[0].geometry.location.lng());
+                            cities[i++] = new google.maps.LatLng(parseFloat(results[0].geometry.location.lat()),parseFloat(results[0].geometry.location.lng()));
+                            console.log(cities);
+                        } else {
+                            alert("Something got wrong " + status);
+                        }
+                    });
+                });
+            });
+            // Initialize and add the map
+
+            
+            const citiesp = [
+                { lat: 41.88, lng: -87.62 }, // Chicago
+                { lat: 43.05, lng: -87.95 }, // Milwaukee
+                { lat: 42.33, lng: -83.04 }, // Detroit
+                { lat: 39.76, lng: -86.15 }, // Indianapolis
+                { lat: 38.62, lng: -90.19 } // St. Louis
+            ];
+                console.log(citiesp)
+
+
+            // Add Distance Matrix here
+
+            // Callback function used to process Distance Matrix response
+            function callback(response, status) {
+                if (status !== "OK") {
+                    alert("Error with distance matrix");
+                    return;
+                }
+                console.log(response);
+                var rows = response.rows.length;
+                var col = response.rows.length;
+                var data = [];
+                for (var i = 0; i < rows; i++) {
+                    var row = [];
+                    for (var j = 0; j < rows; j++) {
+                        row[j] = (response.rows[i].elements[j].distance.value);
+                    }
+                    data[i] = row;
+                }
+
+                console.log(data);
+                // Building the CSV from the Data two-dimensional array
+                // Each column is separated by ";" and new line "\n" for next row
+
+                var csvContent = '';
+                data.forEach(function (infoArray, index) {
+                    dataString = infoArray.join(',');
+                    console.log(infoArray);
+
+                    csvContent += index < data.length ? dataString + '\n' : dataString;
+                });
+
+                // The download function takes a CSV string, the filename and mimeType as parameters
+                // Scroll/look down at the bottom of this snippet to see how download is called
+                var download = function (content, fileName, mimeType) {
+                    var a = document.createElement('a');
+                    mimeType = mimeType || 'application/octet-stream';
+
+                    if (navigator.msSaveBlob) { // IE10
+                        navigator.msSaveBlob(new Blob([content], {
+                            type: mimeType
+                        }), fileName);
+                    } else if (URL && 'download' in a) { //html5 A[download]
+                        a.href = URL.createObjectURL(new Blob([content], {
+                            type: mimeType
+                        }));
+                        a.setAttribute('download', fileName);
+                        document.body.appendChild(a);
+                        a.click();
+                        document.body.removeChild(a);
+                    } else {
+                        location.href = 'data:application/octet-stream,' + encodeURIComponent(content); // only this mime type is supported
+                    }
+                }
+
+                download(csvContent, 'dowload.csv', 'text/csv;encoding:utf-8');
+
+            }
+
+        }
+
+
+    </script>
+
 </body>
 </html>
